# Django_hotel

./: .env.template  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  readme.md  requirements.txt
mysite/fixtures/: booking_fixture.json  profile_fixture.json  reviews_fixture.json  rooms_fixture.json  user_fixture.json
mysite/my_hotel/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
mysite/my_hotel/migrations/: 0001_initial.py  0002_alter_room_type.py  0003_customuser_delete_profile.py  0004_profile_delete_customuser.py  0005_alter_booking_status.py  0006_room_is_popular.py
mysite/my_hotel/static/my_hotel/css/: all_rooms_page.css  login.css  main_page_style.css  profile.css  register.css  room_detail.css
mysite/my_hotel/templates/my_hotel/: base.html  booking.html  login.html  main_page.html  profile.html  register.html  review.html  room_detail.html  rooms_filter.html
mysite/mysite/: settings.py  urls.py
